Added application icon,css rules and semantic html
Added application icon to assets folder

Added style rules for index page.

Semantic html.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "inventory",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start":"electron main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "GPL-3.0",
-  "devDependencies": {
-    "electron": "^1.3.5"
-  }
+    "name": "inventory",
+    "version": "1.0.0",
+    "description": "Electron inventory management system",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron main.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "GPL-3.0",
+    "devDependencies": {
+        "devtron": "^1.3.0",
+        "electron": "^1.4.0"
+    },
+    "repository": "thoniorf/Inventory"
 }
